# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myb2t"
version = "1.0.1"
description = "My submission to the 2025 Brain-to-text Kaggle challenge"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Joshua Hunt", email = "jbhunt303@gmail.com" }
]
dependencies = [
  "numpy",
  "torch",
  "h5py",
  "pyspellchecker",
  "jiwer",
  "pandas",
  "transformers"
]

[tool.setuptools.packages.find]
where = ["src"]